--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 <section class="examples-section">
     <div class="container flex example-header">
         <div class="heading"><h2>One platform, endless possibilities</h2></div>
-        <a href="#" class="secondary-button secondary-button2 ">see more example<i class="fa-solid fa-right-long"></i></a>
+        <div><a href="#" class="secondary-button secondary-button2 ">see more example<i class="fa-solid fa-right-long"></i></a></div>
     </div>
     <div class="example-area container flex">
         <a href="#" class="examples-card examples-card1">
@@ -245,39 +245,46 @@
     </div>
 </div>
 
-<section class="sub-footer">
-    <div class="headings flex">
-        <a href="#"><img src="asset 1.png" alt=""></a>
+<section class="sub-footer"> 
+    <div class="headings container flex">
+        <div class="footer-img flex "><img src="asset 1.png" alt=""></div>
         <div class="link-column flex">
-            <h3>product</h3>
-            <p>Overview </p>
-            <p>Pricing </p>
-            <p>Research panel </p>
-            <p>Customers </p>
-            <p>Status page </p>
-            <p>Sign up </p>
-            <p>Book a demo </p>
+            <ul>
+                <h3>product</h3>
+                <li>Overview</li>
+                <li>Pricing</li>
+                <li>Research panel</li>
+                <li>Customers</li>
+                <li>Status page</li>
+                <li>Sign up</li>
+                <li>Book a demo</li>
+            </ul>
         </div>
         <div class="link-column flex">
-            <h3>Methodologies</h3>
-            <p>Card sorting</p>
-            <p>Prototype testing</p>
-            <p>First click tests</p>
-            <p>Preference tests</p>
-            <p>Five second tests</p>
-            <p>Design surveys</p>
+            <ul>
+                <h3>Methodologies</h3>
+                <li>Card sorting</li>
+                <li>Prototype testing</li>
+                <li>First click tests</li>
+                <li>Preference tests</li>
+                <li>Five second tests</li>
+                <li>Design surveys</li>
+            </ul>
         </div>
         <div class="link-column flex">
-            <h3>Resources</h3>
-            <p>Blog</p>
-            <p>Examples</p>
-            <p>Testing guides</p>
-            <p>Research panel calculator</p>
-            <p>Help center</p>
-            <p>Contact</p>
-            <p>Careers</p>
+            <ul>
+                <h3>Resources</h3>
+                <li>Blog</li>
+                <li>Examples</li>
+                <li>Testing guides</li>
+                <li>Research panel calculator</li>
+                <li>Help center</li>
+                <li>Contact</li>
+                <li>Careers</li>
+            </ul>
         </div>
     </div>
 </section>
+
 </body>
 </html>
